# Sysopy

./: .gitignore  README.md
cw02/: .gitignore  CMakeLists.txt  generator.c  generator.h  runner.sh  wyniki.txt
cw02/zad1/: .gitignore  CMakeLists.txt  cw02  cw02.cbp  generator.c  main.c  runner.sh  sorter_and_shuffler.c  sorter_and_shuffler.h  sorter_and_shuffler_sys.c  sorter_and_shuffler_sys.h  test  wyniki.txt
cw02/zad2/: CMakeLists.txt  main.c  main_nftw.c  zad2  zad2.cbp  zad2_nftw
cw02/zad3/: CMakeLists.txt  main.c  zad3
cw03/: CMakeLists.txt  cmd  cw03  cw03.cbp  main.c  main_2.c.c  rh  vairable_printer.c  vp  zad2
cw03/zad1/: CMakeLists.txt  cmd
cw03/zad2/: CMakeLists.txt  cmd2  main_2.c.c  resource_hungry.c  vairable_printer.c
cw04/zad1/: CMakeLists.txt  main.c  zad1
cw04/zad2/: .CMakeLists.txt.swo  .CMakeLists.txt.swp  CMakeLists.txt  child  child.c  main.c  zad2
cw04/zad3/: CMakeLists.txt  main.c  main_with_star.c  zad3  zad3.cbp  zad3_2
laby/: tester.c
laby/lab3/: IHello  IHelloWorld.c  VariablePrinter.c  forkHelloWorld.c  parent.c
laby/lab4/: blocker  blocker.c  catcher  childsignaller.c  int_catcher.c  selfsignaller.c  sigaction  sigcounter
laby/lab5/: piper  piper.c  receiver  receiver.c  sender  sender.c
lista/: .dropbox  .gitignore  CMakeLists.txt  OFF  core  data.csv  gdb.txt  list.c  list.h  lista.cbp  main.c  main_dynamic.c  person.c  person.h  results.txt  runner.sh  s  tester.c  tester.h  tree.c  tree.h  wnioski.txt
